Fixed z-index so that the alerts show over the top of other elements

--- a/src/scss/alertpal_dark.scss
+++ b/src/scss/alertpal_dark.scss
@@ -11,7 +11,7 @@
 		left: 0;
 		background-color: #000;
 		opacity: 0.5;
-		z-index: 98;
+		z-index: 99999999999999;
 		@include animation(fadeIn ease 0.2s);
 	}
 
@@ -29,7 +29,7 @@
 		box-shadow: $shadow;
 		overflow-y: auto;
 		overflow-x: hidden;
-		z-index: 99;
+		z-index: 999999999999999;
 		@include animation(popUp ease 0.2s);
 	}
 
